# webnovel-reader

./: .gitignore  README.md  pyproject.toml
src/webnovel_reader/: __init__.py  config.py  main.py
src/webnovel_reader/core/: epub.py
src/webnovel_reader/domain/: models.py
src/webnovel_reader/services/: library.py
src/webnovel_reader/web/: app.py  routes.py  templates.py
src/webnovel_reader/web/templates/: base.html  index.html
