[project]
name = "webnovel-reader"
version = "0.1.0"
description = "A small, template-based Epub reader for webnovels."
readme = "README.md"
authors = [
    { name = "David", email = "70505457+davliang@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
webnovel-reader = "webnovel_reader.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10"]
